tests/rspack-test/normalCases/errors/load-module-error/error-loader.js
/** @type {import("@rspack/core").LoaderDefinition} */
module.exports = function (source) {
	const callback = this.async();
	callback(new Error("err: abc"));
}
